--- a/docs/mkdocs.yml
+++ b/docs/mkdocs.yml
@@ -7,6 +7,8 @@ use_directory_urls: false
 # repo_name: webknossos-libs
 edit_uri: ""
 
+copyright: Copyright &copy; scalable minds
+
 theme:
   name: material
   custom_dir: overrides
@@ -33,134 +35,36 @@ theme:
     - navigation.tabs.sticky
     - navigation.sections
     - navigation.top
+    - navigation.path
+    - navigation.indexes 
+    - navigation.footer
+    - toc.follow
+    - search
 
-nav:
-  - WEBKNOSSOS:
-      - webknossos/index.md
-      - webknossos/getting_started.md
-      - Guides:
-          - webknossos/dashboard.md
-          - webknossos/skeleton_annotation.md
-          - webknossos/volume_annotation.md
-          - webknossos/tracing_ui.md
-          - webknossos/mesh_visualization.md
-          - webknossos/datasets.md
-          - Managing Users & Permissions: webknossos/users.md
-          - webknossos/tasks.md
-          - webknossos/sharing.md
-          - webknossos/installation.md
-          - webknossos/automated_analysis.md
-          - webknossos/animations.md
-          - Pen Tablets, iPads, Wacom: webknossos/pen_tablets.md
-          - webknossos/jobs.md
-          - webknossos/export.md
-          - webknossos/proof_reading.md
-          - webknossos/connectome_viewer.md
-      - Tutorials:
-          - Volume Annotation: webknossos/tutorial_volume_annotation.md
-          - Data Sharing: webknossos/tutorial_data_sharing.md
-          - Automation: webknossos/tutorial_automation.md
-          # - Today I Learned: webknossos/today_i_learned.md
-      - Data Sources:
-          - webknossos/image_stacks.md
-          - webknossos/zarr.md
-          - webknossos/wkw.md
-          - webknossos/n5.md
-          - webknossos/neuroglancer_precomputed.md
-      - Reference:
-          - Terminology: webknossos/terminology.md
-          - webknossos/data_formats.md
-          - Keyboard Shortcuts: webknossos/keyboard_shortcuts.md
-          - Frontend Scripting API: https://webknossos.org/assets/docs/frontend-api/index.html" target="_blank
-          - Changelog: webknossos/CHANGELOG.released.md
-          - Migration Guide: webknossos/MIGRATIONS.released.md
-      - Community:
-          - Publications: webknossos/publications.md
-          - GitHub: https://github.com/scalableminds/webknossos" target="_blank
-          - Blog: https://medium.com/scalableminds" target="_blank
-      - Getting Help:
-          - webknossos/faq.md
-          - Community Support: https://forum.image.sc/tag/webknossos" target="_blank
-          - Email Support: mailto:hello@webknossos.org
-          - Commercial Support: https://scalableminds.com" target="_blank
-  - Python Library:
-      - webknossos-py/index.md
-      - webknossos-py/installation.md
-      - Usage Examples:
-          - Dataset Examples:
-              - webknossos-py/examples/dataset_usage.md
-              - webknossos-py/examples/upload_tiff_stack.md
-              - webknossos-py/examples/upload_dicom_stack.md
-              - webknossos-py/examples/upload_image_data.md
-              - webknossos-py/examples/create_dataset_from_images.md
-              - webknossos-py/examples/image_stack_to_dataset.md
-              - webknossos-py/examples/download_image_data.md
-              - webknossos-py/examples/download_tiff_stack.md
-              - webknossos-py/examples/remote_datasets.md
-              - webknossos-py/examples/zarr_and_dask.md
-              - webknossos-py/examples/convert_4d_tiff.md
-          - Annotation Examples:
-              - webknossos-py/examples/apply_merger_mode.md
-              - webknossos-py/examples/learned_segmenter.md
-              - webknossos-py/examples/skeleton_synapse_candidates.md
-              - webknossos-py/examples/calculate_segment_sizes.md
-              - webknossos-py/examples/download_segments.md
-              - webknossos-py/examples/load_annotation_from_file.md
-              - webknossos-py/examples/skeleton_path_length.md
-              - webknossos-py/examples/upsample_skeleton.md
-          - Administration Examples:
-              - webknossos-py/examples/user_times.md
-              - webknossos-py/examples/annotation_project_administration.md
-      - API Reference:
-          - Overview: api/webknossos.md
-          - Geometry:
-              - BoundingBox: api/webknossos/geometry/bounding_box.md
-              - NDBoundingBox: api/webknossos/geometry/nd_bounding_box.md
-              - Mag: api/webknossos/geometry/mag.md
-              - Vec3Int: api/webknossos/geometry/vec3_int.md
-              - VecInt: api/webknossos/geometry/vec_int.md
-          - Dataset:
-              - Dataset: api/webknossos/dataset/dataset.md
-              - Layer: api/webknossos/dataset/layer.md
-              - MagView: api/webknossos/dataset/mag_view.md
-              - View: api/webknossos/dataset/view.md
-          - Annotation: api/webknossos/annotation/annotation.md
-          - Skeleton:
-              - Skeleton: api/webknossos/skeleton/skeleton.md
-              - Group: api/webknossos/skeleton/group.md
-              - Tree: api/webknossos/skeleton/tree.md
-              - Node: api/webknossos/skeleton/node.md
-          - Authentication & Server Context: api/webknossos/client/context.md
-          - Administration:
-              - User: api/webknossos/administration/user.md
-              - Project: api/webknossos/administration/project.md
-              - Task: api/webknossos/administration/task.md
-      - CLI Reference:
-          - Overview: cli/index.md
-      - Version Changelog:
-          - webknossos-py/stability_policy.md
-          - webknossos-py/changelog.md
-      - Community:
-          - webknossos-py/CONTRIBUTING.md
-          - webknossos-py/CODE_OF_CONDUCT.md
-          - webknossos/terminology.md
-          - Getting Help:
-              - Community Support: https://forum.image.sc/tag/webknossos" target="_blank
-              - Email Support: mailto:hello@webknossos.org
-              - Commercial Support: https://scalableminds.com" target="_blank
-          - GitHub: https://github.com/scalableminds/webknossos-libs/tree/master/webknossos" target="_blank
-          - Blog: https://medium.com/scalableminds" target="_blank
+extra:
+  social:
+    - icon: fontawesome/brands/github
+      link: https://github.com/scalableminds/webknossos
+    - icon: fontawesome/brands/x-twitter 
+      link: https://x.com/webknossos
+    - icon: fontawesome/brands/mastodon 
+      link: https://mstdn.science/@webknossos
+    - icon: fontawesome/brands/youtube 
+      link: https://www.youtube.com/@webknossos
+    - icon: fontawesome/brands/medium 
+      link: https://medium.com/webknossos
+  generator: false
 
 plugins:
   - search
   - redirects:
       redirect_maps:
         "index.md": "webknossos/index.md"
-  - mkdocs-video:
-      is_video: True
-  - mkdocs-video:
-      is_video: False
-      mark: "youtube-video"
+#   - mkdocs-video:
+#       is_video: True
+#   - mkdocs-video:
+#       is_video: False
+#       mark: "youtube-video"
   - glightbox
 
 markdown_extensions:
@@ -175,5 +79,123 @@ markdown_extensions:
       base_path: ".."
       check_paths: true
   - pymdownx.emoji:
-      emoji_index: !!python/name:materialx.emoji.twemoji
-      emoji_generator: !!python/name:materialx.emoji.to_svg
+      emoji_index: !!python/name:material.extensions.emoji.twemoji
+      emoji_generator: !!python/name:material.extensions.emoji.to_svg
+  - pymdownx.keys
+  - pymdownx.tabbed:
+      alternate_style: true
+  - toc:
+      title: On this page
+      permalink: true  
+
+nav:
+  - WEBKNOSSOS:
+    - webknossos/index.md
+    - webknossos/getting_started.md
+    - Guides:
+      - webknossos/dashboard.md
+      - Skeleton: 
+        - webknossos/skeleton_annotation/index.md
+        - Tools: webknossos/tools.md
+      - webknossos/volume_annotation.md
+      - webknossos/tracing_ui.md
+      - webknossos/mesh_visualization.md
+      - webknossos/datasets.md
+      - Managing Users & Permissions: webknossos/users.md
+      - webknossos/tasks.md
+      - webknossos/sharing.md
+      - webknossos/installation.md
+      - webknossos/automated_analysis.md
+      - webknossos/animations.md
+      - Pen Tablets, iPads, Wacom: webknossos/pen_tablets.md
+      - webknossos/jobs.md
+      - webknossos/export.md
+      - webknossos/proof_reading.md
+      - webknossos/connectome_viewer.md
+    - Tutorials:
+      - Volume Annotation: webknossos/tutorial_volume_annotation.md
+      - Data Sharing: webknossos/tutorial_data_sharing.md
+      - Automation: webknossos/tutorial_automation.md
+      # - Today I Learned: webknossos/today_i_learned.md
+    - Data Sources:
+      - webknossos/image_stacks.md
+      - webknossos/zarr.md
+      - webknossos/wkw.md
+      - webknossos/n5.md
+      - webknossos/neuroglancer_precomputed.md
+    - Reference:
+      - Terminology: webknossos/terminology.md
+      - webknossos/data_formats.md
+      - Keyboard Shortcuts: webknossos/keyboard_shortcuts.md
+      - Frontend Scripting API: https://webknossos.org/assets/docs/frontend-api/index.html" target="_blank
+      - Changelog: webknossos/CHANGELOG.released.md
+      - Migration Guide: webknossos/MIGRATIONS.released.md
+  - Python Library:
+    - webknossos-py/index.md
+    - webknossos-py/installation.md
+    - Usage Examples:
+      - Dataset Examples:
+        - webknossos-py/examples/dataset_usage.md
+        - webknossos-py/examples/upload_tiff_stack.md
+        - webknossos-py/examples/upload_dicom_stack.md
+        - webknossos-py/examples/upload_image_data.md
+        - webknossos-py/examples/create_dataset_from_images.md
+        - webknossos-py/examples/image_stack_to_dataset.md
+        - webknossos-py/examples/download_image_data.md
+        - webknossos-py/examples/download_tiff_stack.md
+        - webknossos-py/examples/remote_datasets.md
+        - webknossos-py/examples/zarr_and_dask.md
+        - webknossos-py/examples/convert_4d_tiff.md
+      - Annotation Examples:
+        - webknossos-py/examples/apply_merger_mode.md
+        - webknossos-py/examples/learned_segmenter.md
+        - webknossos-py/examples/skeleton_synapse_candidates.md
+        - webknossos-py/examples/calculate_segment_sizes.md
+        - webknossos-py/examples/download_segments.md
+        - webknossos-py/examples/load_annotation_from_file.md
+        - webknossos-py/examples/skeleton_path_length.md
+        - webknossos-py/examples/upsample_skeleton.md
+      - Administration Examples:
+        - webknossos-py/examples/user_times.md
+        - webknossos-py/examples/annotation_project_administration.md
+    - API Reference:
+      - Overview: api/webknossos.md
+      - Geometry:
+        - BoundingBox: api/webknossos/geometry/bounding_box.md
+        - NDBoundingBox: api/webknossos/geometry/nd_bounding_box.md
+        - Mag: api/webknossos/geometry/mag.md
+        - Vec3Int: api/webknossos/geometry/vec3_int.md
+        - VecInt: api/webknossos/geometry/vec_int.md
+      - Dataset:
+        - Dataset: api/webknossos/dataset/dataset.md
+        - Layer: api/webknossos/dataset/layer.md
+        - MagView: api/webknossos/dataset/mag_view.md
+        - View: api/webknossos/dataset/view.md
+      - Annotation: api/webknossos/annotation/annotation.md
+      - Skeleton:
+        - Skeleton: api/webknossos/skeleton/skeleton.md
+        - Group: api/webknossos/skeleton/group.md
+        - Tree: api/webknossos/skeleton/tree.md
+        - Node: api/webknossos/skeleton/node.md
+      - Authentication & Server Context: api/webknossos/client/context.md
+      - Administration:
+        - User: api/webknossos/administration/user.md
+        - Project: api/webknossos/administration/project.md
+        - Task: api/webknossos/administration/task.md
+    - CLI Reference:
+      - Overview: cli/index.md
+    - Version Changelog:
+      - webknossos-py/stability_policy.md
+      - webknossos-py/changelog.md
+    - Community:
+      - webknossos-py/CONTRIBUTING.md
+      - webknossos-py/CODE_OF_CONDUCT.md
+      - webknossos/terminology.md
+      - GitHub: https://github.com/scalableminds/webknossos-libs/tree/master/webknossos" target="_blank
+      - Blog: https://medium.com/scalableminds" target="_blank
+  - Community:
+    - webknossos/faq.md
+    - Community Support: https://forum.image.sc/tag/webknossos" target="_blank
+    - Email Support: mailto:hello@webknossos.org
+    - Commercial Support: https://scalableminds.com" target="_blank
+
