--- a/docs/pyproject.toml
+++ b/docs/pyproject.toml
@@ -7,8 +7,10 @@ readme = "README.md"
 
 [tool.poetry.dependencies]
 # mkdocs-video is not ready for Py3.11 because of bugs in lxml lib https://github.com/getnikola/nikola/issues/3679
-python = ">=3.8,<3.11"
+python = ">=3.9,<3.11"
 mkdocs-glightbox = "^0.3.4"
+mkdocstrings-python = "^1.10.8"
+mkdocs-gen-files = "^0.5.0"
 
 [tool.poetry.dev-dependencies]
 LinkChecker = "^10.0.1"
@@ -16,8 +18,7 @@ mkdocs = "^1.4.3"
 mkdocs-video = "^1.5.0"
 mkdocs-material = "^9.1.16"
 mkdocs-redirects = "^1.2.0"
-pdoc = "^14.0.0"
-webknossos = { path = "../webknossos/", develop = true }
+webknossos = { path = "../webknossos/", develop = true}
 
 [build-system]
 requires = ["poetry-core>=1.1"]
