--- a/docs/mkdocs.yml
+++ b/docs/mkdocs.yml
@@ -206,5 +206,5 @@ markdown_extensions:
       base_path: ".."
       check_paths: true
   - pymdownx.emoji:
-      emoji_index: !!python/name:materialx.emoji.twemoji
-      emoji_generator: !!python/name:materialx.emoji.to_svg
+        emoji_index: !!python/name:material.extensions.emoji.twemoji
+        emoji_generator: !!python/name:material.extensions.emoji.to_svg
