--- a/.github/workflows/publish_docs.yml
+++ b/.github/workflows/publish_docs.yml
@@ -27,7 +27,8 @@ jobs:
 
     - name: Build Docs
       run: |
-        docs/generate.sh --persist
+        cd docs
+        ./generate.sh --persist
 
     - name: Push docs
       env:
