--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -153,7 +153,8 @@ jobs:
     strategy:
       max-parallel: 4
       matrix:
-        python-version: ["3.12", "3.11", "3.10", "3.9"]
+#        python-version: ["3.12", "3.11", "3.10", "3.9"]
+        python-version: ["3.12"]
         group: [1, 2, 3]
       fail-fast: false
     defaults:
