fix issues with mkdocs-videos and empty pages

--- a/docs/pyproject.toml
+++ b/docs/pyproject.toml
@@ -7,12 +7,12 @@ readme = "README.md"
 
 [tool.poetry.dependencies]
 # mkdocs-video is not ready for Py3.11 because of bugs in lxml lib https://github.com/getnikola/nikola/issues/3679
-python = ">=3.8,<3.11"
+python = ">=3.9,<3.11"
 mkdocs-glightbox = "^0.4.0"
 
 [tool.poetry.dev-dependencies]
 LinkChecker = "^10.0.1"
-mkdocs-video = "^1.5.0"
+mkdocs-video = {branch="master", git="https://github.com/calmzhu/mkdocs-video.git"}
 mkdocs-material = "^9.5.32"
 mkdocs-redirects = "^1.2.0"
 pdoc = "^14.6.0"
