--- a/docs/mkdocs.yml
+++ b/docs/mkdocs.yml
@@ -32,11 +32,11 @@ theme:
   features:
     - navigation.instant
     - navigation.tabs
+    - navigation.indexes
     - navigation.tabs.sticky
     - navigation.sections
     - navigation.top
     - navigation.path
-    - navigation.indexes 
     - navigation.footer
     - toc.follow
     - search
@@ -60,18 +60,17 @@ plugins:
   - redirects:
       redirect_maps:
         "index.md": "webknossos/index.md"
-#   - mkdocs-video:
-#       is_video: True
-#   - mkdocs-video:
-#       is_video: False
-#       mark: "youtube-video"
+  - mkdocs-video:
+      is_video: True
+  - mkdocs-video:
+      is_video: False
+      mark: "youtube-video"
   - glightbox
 
 markdown_extensions:
   - admonition
   - attr_list
   - md_in_html
-  - md_extensions.pdoc_toc_extension
   - pymdownx.highlight
   - pymdownx.inlinehilite
   - pymdownx.superfences
@@ -94,23 +93,27 @@ nav:
     - webknossos/getting_started.md
     - Guides:
       - Dashboard:
+        - webknossos/dashboard/index.md
         - Datasets: webknossos/dashboard/datasets.md
         - Annotations: webknossos/dashboard/annotations.md
         - Tasks: webknossos/dashboard/tasks.md
         - Featured Publications: webknossos/dashboard/featured_publications.md
       - User Interface:
+        - webknossos/ui/index.md
         - Toolbar: webknossos/ui/toolbar.md
         - Layers and Settings: webknossos/ui/layers.md
         - Object Info and Lists: webknossos/ui/object_info.md
         - Status Bar: webknossos/ui/status_bar.md
         - Keyboard Shortcuts: webknossos/ui/keyboard_shortcuts.md
       - Volume Annotations:
+        - webknossos/volume_annotation/index.md
         - Tools: webknossos/volume_annotation/tools.md
         - Segments List: webknossos/volume_annotation/segments_list.md
         - Segments Statistics: webknossos/volume_annotation/segments_statistics.md
         - Import and Export Volume Annotations: webknossos/volume_annotation/import_export.md
         - Pen Tablets, iPads, Wacom: webknossos/volume_annotation/pen_tablets.md
       - Skeleton Annotations:
+        - webknossos/skeleton_annotation/index.md
         - Tools: webknossos/skeleton_annotation/tools.md
         - Skeleton Trees List: webknossos/skeleton_annotation/trees_list.md
         - Skeleton Operations: webknossos/skeleton_annotation/operations.md
@@ -118,6 +121,7 @@ nav:
         - Import and Export Skeleton Annotations: webknossos/skeleton_annotation/import_export.md
         - Annotation Modes: webknossos/skeleton_annotation/modes.md
       - Mesh Visualization:
+        - webknossos/meshes/index.md
         - Loading Meshes: webknossos/meshes/loading_meshes.md
         - Working with Meshes: webknossos/meshes/working_with_meshes.md
         - Precomputed Meshes: webknossos/meshes/precomputed_meshes.md
@@ -136,60 +140,51 @@ nav:
         - Export Through Python: webknossos/data/export_python.md
         - Export as Zarr Stream: webknossos/data/zarr_stream.md
       - Managing Datasets:
+        - webknossos/datasets/index.md
         - Converting Datasets: webknossos/datasets/converting.md
         - Composing Datasets: webknossos/datasets/composing.md
         - Dataset Organization and Folders: webknossos/datasets/organization.md
         - Dataset Settings: webknossos/datasets/settings.md
         - Using external data storage: webknossos/datasets/external_storage.md
       - Managing Users and Permissions:
+        - webknossos/users/index.md
         - Organizations: webknossos/users/organizations.md
         - Teams: webknossos/users/teams.md
         - Access rights/roles: webknossos/users/access_rights.md
         - Adding New Users: webknossos/users/new_users.md
         - Password & Account: webknossos/users/password.md
       - Managing Tasks & Projects:
+        - webknossos/tasks_projects/index.md
         - Concepts: webknossos/tasks_projects/concepts.md
         - Tasks: webknossos/tasks_projects/tasks.md
         - Projects: webknossos/tasks_projects/projects.md
       - Collaboration and sharing:
+        - webknossos/sharing/index.md
         - Annotation Sharing: webknossos/sharing/annotation_sharing.md
         - Dataset Sharing: webknossos/sharing/dataset_sharing.md
       - AI Automations and Jobs:
+        - Foobar:
+          - webknossos/automation/index.md
         - AI Segmentations: webknossos/automation/ai_segmentation.md
         - Animations: webknossos/automation/animations.md
         - Jobs: webknossos/automation/jobs.md
         - Alignment: webknossos/automation/alignment.md
       - Proofreading:
+        - webknossos/proofreading/index.md
         - Tools: webknossos/proofreading/tools.md
         - Segmentation mappings: webknossos/proofreading/segmentation_mappings.md
         - Merger-mode: webknossos/proofreading/merger_mode.md
-        - Skeletons and custom scripting: webknossos/proofreading/xxx.md
       - Synapse and Connectome Viewer: webknossos/connectome_viewer.md
       - Open source version:
+        - webknossos/open_source/index.md 
         - Installation: webknossos/open_source/installation.md
         - Dataset Handling: webknossos/open_source/dataset_handling.md
-
-        # - webknossos/dashboard.md
-        # - webknossos/skeleton_annotation.md
-        # - webknossos/volume_annotation.md
-        # - webknossos/tracing_ui.md
-        # - webknossos/mesh_visualization.md
-        # - webknossos/datasets.md
-        # - Managing Users & Permissions: webknossos/users.md
-        # - webknossos/tasks.md
-        # - webknossos/sharing.md
-        # - webknossos/installation.md
-        # - webknossos/automated_analysis.md
-        # - webknossos/animations.md
-        # - webknossos/jobs.md
-        # - webknossos/export.md
-        # - webknossos/proof_reading.md
-        # - webknossos/connectome_viewer.md
     - Tutorials:
       - Volume Annotation: webknossos/tutorial_volume_annotation.md
       - Data Sharing: webknossos/tutorial_data_sharing.md
       - Automation: webknossos/tutorial_automation.md
       # - Today I Learned: webknossos/today_i_learned.md
+    - TODO_TOOLS: webknossos/tools.md
     - Reference:
       - Terminology: webknossos/terminology.md
       - webknossos/data_formats.md
@@ -222,6 +217,7 @@ nav:
         - webknossos-py/examples/load_annotation_from_file.md
         - webknossos-py/examples/skeleton_path_length.md
         - webknossos-py/examples/upsample_skeleton.md
+        - webknossos-py/examples/merge_nmls.md
       - Administration Examples:
         - webknossos-py/examples/user_times.md
         - webknossos-py/examples/annotation_project_administration.md
