--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -192,6 +192,12 @@ jobs:
           WK_TOKEN: ${{ secrets.WK_TOKEN }}
         run: ./test.sh -vv -p no:faulthandler --splits 3 --group ${{ matrix.group }} --splitting-algorithm least_duration
 
+      - name: tensorstore tests
+        timeout-minutes: 30
+        env:
+          WK_TOKEN: ${{ secrets.WK_TOKEN }}
+        run: ./test_tensorstore.sh -vv -p no:faulthandler --splits 3 --group ${{ matrix.group }} --splitting-algorithm least_duration
+
       - name: Check if git is dirty
         run: |
           git diff --no-ext-diff --quiet --exit-code
