--- a/webknossos/pyproject.toml
+++ b/webknossos/pyproject.toml
@@ -59,7 +59,7 @@ zipp = "^3.5.0"
 # below `extras`. They can be opted into by apps.
 imagecodecs = { version = ">=2021.11.20", optional = true }
 JPype1 = { version = "^1.3.0", optional = true }
-tifffile = { version = ">=2021.11.2", optional = true }
+tifffile = { version = ">=2021.11.2,<2024.8.24", optional = true }
 pylibCZIrw = { version = "4.1.1", source = "scm", optional = true}
 
 [tool.poetry.extras]
