--- a/docs/mkdocs.yml
+++ b/docs/mkdocs.yml
@@ -125,6 +125,7 @@ nav:
               - Layer: api/webknossos/dataset/layer.md
               - MagView: api/webknossos/dataset/mag_view.md
               - View: api/webknossos/dataset/view.md
+              - RemoteFolder: api/webknossos/dataset/remote_folder.md
           - Annotation: api/webknossos/annotation/annotation.md
           - Skeleton:
               - Skeleton: api/webknossos/skeleton/skeleton.md
