--- a/webknossos/Dockerfile
+++ b/webknossos/Dockerfile
@@ -6,7 +6,7 @@ RUN pip install -r /requirements.txt
 
 RUN mkdir /webknossos
 COPY webknossos/webknossos /webknossos/webknossos
-COPY webknossos/poetry.lock /webknossos/
+COPY webknossos/uv.lock /webknossos/
 COPY webknossos/pyproject.toml /webknossos/
 COPY webknossos/README.md /webknossos/
 
@@ -18,4 +18,5 @@ COPY cluster_tools/README.md /cluster_tools/
 
 WORKDIR /webknossos
 
+RUN uv sync --all-extras --frozen
 RUN poetry config virtualenvs.create false && poetry install --all-extras
