--- a/webknossos/pyproject.toml
+++ b/webknossos/pyproject.toml
@@ -184,7 +184,7 @@ markers = ["with_vcr: Runs with VCR recording and optionally blocked network"]
 testpaths = ["tests"]
 
 [build-system]
-requires = ["setuptools>=70.0", "dunamai==1.18.1"]
+requires = ["setuptools>=70.0", "dunamai==1.18.1", "wheel; python_version>='3.12'"]
 build-backend = "setuptools.build_meta"
 include = [
     "webknossos/version.py",
