--- a/webknossos/Dockerfile
+++ b/webknossos/Dockerfile
@@ -1,8 +1,9 @@
-FROM python:3.10
+FROM python:3.12
 
-COPY requirements.txt /
+# Remove once cluster_tools is updated to uv as well
+RUN pip install poetry==1.8 
 
-RUN pip install -r /requirements.txt
+COPY --from=ghcr.io/astral-sh/uv:0.4.20 /uv /bin/uv
 
 RUN mkdir /webknossos
 COPY webknossos/webknossos /webknossos/webknossos
@@ -18,5 +19,6 @@ COPY cluster_tools/README.md /cluster_tools/
 
 WORKDIR /webknossos
 
+RUN uv venv --system-site-packages
 RUN uv sync --all-extras --frozen
 RUN poetry config virtualenvs.create false && poetry install --all-extras
