--- a/webknossos/Dockerfile
+++ b/webknossos/Dockerfile
@@ -1,8 +1,5 @@
 FROM python:3.12
 
-# Remove once cluster_tools is updated to uv as well
-RUN pip install poetry==1.8 
-
 COPY --from=ghcr.io/astral-sh/uv:0.4.20 /uv /bin/uv
 
 RUN mkdir /webknossos
@@ -13,7 +10,7 @@ COPY webknossos/README.md /webknossos/
 
 RUN mkdir /cluster_tools
 COPY cluster_tools/cluster_tools /cluster_tools/cluster_tools
-COPY cluster_tools/poetry.lock /cluster_tools/
+COPY cluster_tools/uv.lock /cluster_tools/
 COPY cluster_tools/pyproject.toml /cluster_tools/
 COPY cluster_tools/README.md /cluster_tools/
 
@@ -21,4 +18,3 @@ WORKDIR /webknossos
 
 RUN uv venv --system-site-packages
 RUN uv sync --all-extras --frozen
-RUN poetry config virtualenvs.create false && poetry install --all-extras
