--- a/cluster_tools/tests/Dockerfile
+++ b/cluster_tools/tests/Dockerfile
@@ -1,14 +1,14 @@
 FROM python:3.11
 
+COPY --from=ghcr.io/astral-sh/uv:0.4.20 /uv /bin/uv
+
 RUN mkdir /cluster_tools
-COPY requirements.txt /cluster_tools
-COPY poetry.lock /cluster_tools
+COPY uv.lock /cluster_tools
 COPY pyproject.toml /cluster_tools
 
 WORKDIR /cluster_tools
 
-RUN pip install -r requirements.txt && poetry config virtualenvs.create false && poetry install --all-extras
+RUN uv venv --system-site-packages
+RUN uv sync --all-extras --frozen
 
 COPY . /cluster_tools
-
-RUN poetry install --all-extras
