uv in "docs" sub project

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -282,16 +282,11 @@ jobs:
         with:
           repository: scalableminds/webknossos
           path: docs/wk-repo
-      - name: Set up Python 3.8
-        uses: actions/setup-python@v4
+      - name: Install uv
+        uses: astral-sh/setup-uv@v3
         with:
-          python-version: 3.8
-          architecture: "x64"
-
-      - name: Install dependencies
-        run: |
-          pip3 install poetry==1.8
-
+          # Install a specific version of uv.
+          version: "0.4.19"
       - name: Build Docs
         run: |
           cd docs
@@ -324,7 +319,7 @@ jobs:
           SLACK_HOOK: ${{ secrets.LINK_CHECKER_SLACK_HOOK }}
         run: |
           cd docs
-          poetry run linkchecker --config linkcheckerrc https://docs.webknossos.org > link_status || \
+          uv run linkchecker --config linkcheckerrc https://docs.webknossos.org > link_status || \
             curl -X POST --data-urlencode "payload={\"text\": \":warning: Broken Links on doc.webknossos.org :warning:\n"'```'"\n$(cat link_status)\n"'```"}' \
               "$SLACK_HOOK"
 
@@ -344,8 +339,6 @@ jobs:
         with:
           # Install a specific version of uv.
           version: "0.4.19"
-      - name: Set up Python 3.9
-        run: uv python install 3.9
       - name: Publish python packages
         env:
           UV_PUBLISH_TOKEN: ${{ secrets.PYPI_PASSWORD }}
