--- a/cluster_tools/tests/Dockerfile
+++ b/cluster_tools/tests/Dockerfile
@@ -7,6 +7,7 @@ COPY . /cluster_tools
 
 WORKDIR /cluster_tools
 
-RUN uv export --all-extras --output-file requirements.txt
-RUN uv pip sync --system requirements.txt
+RUN uv export --all-extras --output-file requirements.txt && \
+    uv pip sync --system requirements.txt && \
+    uv cache clear
 
