--- a/cluster_tools/tests/Dockerfile
+++ b/cluster_tools/tests/Dockerfile
@@ -9,5 +9,5 @@ WORKDIR /cluster_tools
 
 RUN uv export --all-extras --output-file requirements.txt && \
     uv pip sync --system requirements.txt && \
-    uv cache clear
+    uv cache clean
 
