--- a/.github/workflows/nightly.yml
+++ b/.github/workflows/nightly.yml
@@ -23,6 +23,8 @@ jobs:
         
     - name: Install uv
       uses: astral-sh/setup-uv@v3
+      with:
+        version: "0.4.19"
         
     - name: Set up Python ${{ matrix.python-version }}
       run: uv python install ${{ matrix.python-version }}
