--- a/.github/workflows/publish_docs.yml
+++ b/.github/workflows/publish_docs.yml
@@ -41,6 +41,6 @@ jobs:
         SLACK_HOOK: ${{ secrets.LINK_CHECKER_SLACK_HOOK }}
       run: |
         cd docs
-        uv run linkchecker --config linkcheckerrc https://docs.webknossos.org > link_status || \
+        uv run --frozen linkchecker --config linkcheckerrc https://docs.webknossos.org > link_status || \
           curl -X POST --data-urlencode "payload={\"text\": \":warning: Broken Links on doc.webknossos.org :warning:\n"'```'"\n$(cat link_status)\n"'```"}' \
             "$SLACK_HOOK"
